# instagram-basic-display-client

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  client.py  pyproject.toml  schemas.py  user_client.py
instabd/: __init__.py  client.py
tests/: conftest.py  test_authentication_schema.py  test_authorize.py  test_exchange.py  test_long_lived_token.py  test_refresh.py
tests/client/: test_authentication_schema.py  test_authorize.py  test_exchange.py  test_exchange_long.py  test_long_lived_token.py  test_refresh.py  test_refresh_for.py  test_to_user_client_from_code.py
tests/request/: test_request.py
tests/user_client/: test_children.py  test_from_access_token.py  test_medias.py  test_user.py
