[tool.poetry]
authors = ["Fernando Rodrigues <devfernandorodrigues@gmail.com>"]
description = ""
name = "instagram-basic-display-client"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.17.0"
black = "^22.1.0"
ipython = "^8.0.1"
pytest = "^7.0.1"
Faker = "^13.0.0"
responses = "^0.18.0"
pytest-mock = "^3.7.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
